[package]
name = "g6"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "import/export graph6 format"
repository = "https://github.com/ygg-lang/pex-g6"
documentation = "https://docs.rs/g6"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
categories = ["parsing"]
keywords = ["graph", "graph6", "parser"]
exclude = ["package.json", "tests/**"]

[dependencies]
fixedbitset = "0.4.2"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
