[package]
name = "petgraph-g6"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "graph6 import"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
petgraph = "0.6.3"

[dependencies.g6]
version = "0.0.2"
path = "../g6"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
