[package]
name = "petgraph-g6"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "import graph6 in petgraph"
repository = "https://github.com/ygg-lang/pex-g6"
documentation = "https://docs.rs/petgraph-g6"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
categories = ["parsing"]
keywords = ["graph", "graph6", "parser"]
exclude = ["package.json", "tests/**"]

[dependencies]
petgraph = "0.6.3"

[dependencies.g6]
version = "0.1.0"
path = "../g6"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
